button hover - fix jumpiness

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@
 
 .first-content {
 	left: 40%;
+	top: 45%;
 	transform: translate(-50%, -50%);
 	position: absolute;
 }
@@ -104,6 +105,7 @@
 	align-self: flex-start;
 	margin-top: 10%;
 	padding-left: 0;
+	position: absolute;
 }
 
 .landing-page-button img:hover {
